--- a/hello.html
+++ b/hello.html
@@ -9,5 +9,8 @@
         <h2>Welcome the GitHub</h2>
         <h3>Hello</h3>
         <p>Hello World!</p>
+        <script>
+            let x = 6;
+        </script>
     </body>
 </html>
