Update hello.html - added(y = 6)

--- a/hello.html
+++ b/hello.html
@@ -11,6 +11,7 @@
         <p>Hello World!</p>
         <script>
             let x = 5;
+            lext y = 6;
         </script>
     </body>
 </html>
