--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,11 @@
         <title>
             hello
         </title>
+        <style>
+            p {
+                color:red;
+            }
+        </style>
     </head>
     <body>
         <h2>Welcome the GitHub</h2>
