--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
         <style>
             p {
                 color:red;
+                font-size: large;
             }
         </style>
     </head>
