--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
             p {
                 color:red;
                 font-size: large;
+                background-color: aqua;
             }
         </style>
     </head>
