--- a/hello.html
+++ b/hello.html
@@ -18,6 +18,7 @@
         <p>Hello World!</p>
         <script>
             let x = 5;
+            let y = 6
         </script>
     </body>
 </html>
