Added background for h3

--- a/hello.html
+++ b/hello.html
@@ -10,6 +10,9 @@
                 font-size: large;
                 background-color: aqua;
             }
+            h3 {
+                background-color: yellowgreen;
+            }
         </style>
     </head>
     <body>
