Added a button - Click

--- a/hello.html
+++ b/hello.html
@@ -19,6 +19,7 @@
         <h2>Welcome the GitHub</h2>
         <h3>Hello</h3>
         <p>Hello World!</p>
+        <button type="button">Click</button>
         <script>
             let x = 5;
         </script>
